# alpha-zero-general

./: .gitattributes  Coach.py  NeuralNet.py  README.md  main.py  mlflow.db  pit.py  pyproject.toml  requirements.txt
connect4/: Connect4Game.py  Connect4Logic.py
connect4/keras/: Connect4NNet.py
connect4/pytorch/: Connect4NNet.py  NNet.py
dotsandboxes/: DotsAndBoxesGame.py
dotsandboxes/keras/: NNet.py
gobang/: GobangGame.py
gobang/keras/: NNet.py
othello/keras/: NNet.py
othello/pytorch/: NNet.py
rts/: RTSGame.py
rts/keras/: NNet.py
santorini/: SantoriniGame.py
tafl/keras/: NNet.py
tafl/pytorch/: NNet.py
tictactoe/keras/: NNet.py
tictactoe/pytorch/: NNet.py  TicTacToeNNet.py
tictactoe_3d/: TicTacToeGame.py
tictactoe_3d/keras/: NNet.py
