[project]
name = "alpha-zero-general"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coloredlogs>=15.0.1",
    "mlflow>=3.12.0",
    "numpy>=2.4.4",
    "psutil>=7.2.2",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "PyPi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
